--- a/cert-monitor/Dockerfile
+++ b/cert-monitor/Dockerfile
@@ -1,4 +1,4 @@
-FROM gcr.io/distroless/static-debian11:non
+FROM gcr.io/distroless/static-debian11
 
 COPY --chown=nonroot:nonroot /bin/cert-monitor_linux_amd64 /bin/cert-monitor
 
