--- a/cert-monitor/kubernetes/config.yml
+++ b/cert-monitor/kubernetes/config.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -9,3 +10,7 @@ data:
       endpoint: http://cert-manager.cert-manager.svc.cluster.local:9402/metrics
       metric: certmanager_certificate_expiration_timestamp_seconds
       timeout: 10s
+    gatherer:
+      page_size: 100
+      timeout: 10s
+...
