Add Kafka notifier

--- a/cert-monitor/config.yml
+++ b/cert-monitor/config.yml
@@ -1,4 +1,11 @@
-threshold: 1m
-gatherer:
-  page_size: 100
-  timeout: 10s
+---
+monitor:
+  threshold: 1m
+  gatherer:
+    page_size: 100
+    timeout: 10s
+notifier:
+  brokers:
+    - localhost:9092
+  topic: cert-monitor-alerts
+...
